refactor: sections and core latex cls (#83)

--- a/core/altacv.cls
+++ b/core/altacv.cls
@@ -1,5 +1,5 @@
 %%%%%%%%%%%%%%%%%
-% This is altacv.cls (v1.1.5, 1 December 2018) written by
+% This is altacv.cls (v1.3.3, 31 October 2020) written by
 % LianTze Lim (liantze@gmail.com).
 %
 %% It may be distributed and/or modified under the
@@ -18,9 +18,7 @@
 
 %%%%%%%%%%%%%%%%
 \NeedsTeXFormat{LaTeX2e}[1995/12/01]
-%% v1.4: Detect TL2018 to handle accented characters in class information
-\@ifl@t@r\fmtversion{2018/04/01}{\UseRawInputEncoding}{}
-\ProvidesClass{altacv}[2018/12/01 AltaCV v1.1.5, yet another alternative class for a résumé/curriculum vitae.]
+\ProvidesClass{altacv}[2020/05/17 AltaCV v1.3.3, yet another alternative class for a resume/curriculum vitae.]
 
 %% v1.1: Optionally load academicons
 \newif\if@academicons
@@ -31,17 +29,24 @@
 \DeclareOption*{\PassOptionsToClass{\CurrentOption}{extarticle}}
 \newif\if@raggedtwoe
 \DeclareOption{ragged2e}{\@raggedtwoetrue}
+%% v1.3: load hyperref for clickable hyperlinks
+\newif\if@withhyper
+\DeclareOption{withhyper}{\@withhypertrue}
 \ProcessOptions\relax
 
 \LoadClass{extarticle}
 
 \RequirePackage[margin=2cm]{geometry}
-\RequirePackage{fontawesome}
 \RequirePackage{ifxetex,ifluatex}
 \RequirePackage{scrlfile}
-%\RequirePackage{setspace}
+\RequirePackage{xparse}
 
-\newif\ifbolded\boldedtrue
+% loading fonts
+\RequirePackage{fontspec}
+
+% Needed to use icons from font-awesome
+% (https://github.com/posquit0/latex-fontawesome)
+\RequirePackage{fontawesome}
 
 %% v1.1.5: added for convenience
 \newif\ifxetexorluatex
@@ -54,17 +59,41 @@
     \xetexorluatexfalse
   \fi
 \fi
-% loading fonts
-\RequirePackage{fontspec}
+
+% Configure a directory location for fonts(default: 'fonts/')
+\newcommand*{\fontdir}[1][static/fonts/]{\def\@fontdir{#1}}
+\fontdir
+
+
+% Set the FontAwesome font to be up-to-date.
+\newfontfamily\FA[Path=\@fontdir]{FontAwesome}
+
 % Main document font
 \setmainfont[
-  Path = static/fonts/ ,
+  Path=\@fontdir ,
   Extension = .ttf ,
   UprightFont = *-regular ,
   BoldFont = *-bold ,
   ItalicFont = *-italic ,
   BoldItalicFont = *-bolditalic
 ]{Lato}
+
+
+\ifxetexorluatex
+  \RequirePackage{fontspec}
+\else
+  %% v1.3.2 attempts to make ligatures
+  %% copy-paste as normal characters
+  \RequirePackage{cmap}
+  \RequirePackage[utf8]{inputenc}
+  \RequirePackage[T1]{fontenc}
+  \input{glyphtounicode}
+  \pdfglyphtounicode{f_f}{FB00}
+  \pdfglyphtounicode{f_f_i}{FB03}
+  \pdfglyphtounicode{f_f_l}{FB04}
+  \pdfglyphtounicode{f_i}{FB01}
+  \pdfgentounicode=1
+\fi
 
 %% v1.1: Optionally load academicons
 %% v1.1.5: Handle different versions of academicons
@@ -108,83 +137,172 @@
   \RequirePackage[newcommands]{ragged2e}
 \fi
 
+\if@withhyper
+  \AtBeginDocument{%
+    \RequirePackage{hyperref}
+    \hypersetup{hidelinks}
+    \urlstyle{same}
+  }
+\fi
+
 \RequirePackage{xcolor}
 
 \colorlet{accent}{blue!70!black}
 \colorlet{heading}{black}
 \colorlet{emphasis}{black}
+\colorlet{headingrule}{black}
+\colorlet{subheading}{emphasis}
 \colorlet{body}{black!80!white}
 \colorlet{lite}{gray!80}
 \colorlet{hard}{black!60!white}
+\colorlet{name}{heading}
+\colorlet{tagline}{accent}
 \newcommand{\itemmarker}{{\small\textbullet}}
-\newcommand{\ratingmarker}{\faCircle}
+\newcommand{\ratingmarker}{\faCircleS}
 
 \RequirePackage{tikz}
 \usetikzlibrary{arrows}
 \RequirePackage[skins]{tcolorbox}
-\RequirePackage{enumitem}
-\setlist{leftmargin=*,labelsep=0.5em,nosep,itemsep=0.25\baselineskip,after=\vskip0.25\baselineskip}
+\RequirePackage[inline]{enumitem}
+\setlist{leftmargin=*,labelsep=0.5em,nosep,itemsep=0.25\baselineskip,after=\vspace{0.25\baselineskip}}
 \setlist[itemize]{label=\itemmarker}
 \RequirePackage{graphicx}
 \RequirePackage{etoolbox}
 \RequirePackage{dashrule}
 \RequirePackage{multirow,tabularx}
 \RequirePackage{changepage}
+% \RequirePackage{marginfix}
 
 \setlength{\parindent}{0pt}
-\newcommand{\divider}{\textcolor{body!30}{\hdashrule{\linewidth}{0.5pt}{0.5ex}}\medskip}
+\newcommand{\divider}{\textcolor{body!30}{\hdashrule{\linewidth}{0.6pt}{0.5ex}}\medskip}
 
 \newenvironment{fullwidth}{%
   \begin{adjustwidth}{}{\dimexpr-\marginparwidth-\marginparsep\relax}}
   {\end{adjustwidth}}
 
-\newcommand{\emailsymbol}{\faAt}
-\newcommand{\phonesymbol}{\faPhone}
-\newcommand{\homepagesymbol}{\faChain}
-\newcommand{\locationsymbol}{\faMapMarker}
-\newcommand{\linkedinsymbol}{\faLinkedin}
-\newcommand{\twittersymbol}{\faTwitter}
-\newcommand{\githubsymbol}{\faGithub}
-\newcommand{\orcidsymbol}{\aiOrcid}
-\newcommand{\mailsymbol}{\faEnvelope}
-\newcommand{\gpgsymbol}{\faKey\faLock}
+%% v1.3.1 \detokenize will break UTF-8 in pdflatex
+%% Using alternative from https://tex.stackexchange.com/a/530911/226
+\newcommand{\utffriendlydetokenize}[1]{%
+\scantokens{%
+  \catcode`\_=12%
+%   \catcode`\^=12%
+%   \catcode`\{=12%
+%   \catcode`\}=12%
+  \catcode`\&=12%
+  \catcode`\$=12%
+  \catcode`\#=12%
+  \catcode`\~=12%
+%   \catcode`\\=12%
+  {#1}%
+}%
+}
+%% v1.3: Incorporating hyperlinks
+%% v1.3.1: using \unfriendlydetokenize to avoid
+%% breaking unicode
+\ExplSyntaxOn
+\NewDocumentCommand{\printinfo}{m m o}{%
+  \IfNoValueTF{#3}{%
+    \mbox{\textcolor{accent}{\normalfont #1}~\utffriendlydetokenize{#2}\hspace{2em}}%
+  }{%
+     \if@withhyper%
+      \mbox{\textcolor{accent}{\normalfont #1}~
+      \href{#3}{\utffriendlydetokenize{#2}}\hspace{2em}}
+     \else%
+       \ClassWarning{Please specify [withhyper] option to enable hyperlinks. Printing out full hyperlink prefix #1 for now.}%
+      \mbox{\textcolor{accent}{\normalfont #1}~{\utffriendlydetokenize{#3#2}}\hspace{2em}}%
+     \fi%
+  }%
+}%
 
-\newcommand{\printinfo}[2]{\mbox{\textcolor{accent}{#1}\hspace{0.5em}#2\hspace{2em}}}
+%% v1.3: Exploring convenient creation of fields
+\NewDocumentCommand{\NewInfoField}{m m o}{%
+  \IfNoValueF{#3}{\csdef{#1 hyperprefix}{#3}}%
+  \csdef{#1 symbol}{#2}%
+  \csdef{#1}##1{%
+    \if@withhyper
+      \IfNoValueTF {#3}
+        {\printinfo{\csuse{#1 symbol}}{##1}}%
+        {\printinfo{\csuse{#1 symbol}}{##1}[\csuse{#1 hyperprefix}##1]}%
+    \else
+      \printinfo{\csuse{#1 symbol}}{##1}%
+    \fi%
+  }
+}
+\ExplSyntaxOff
 
 \newcommand{\name}[1]{\def\@name{#1}}
 \newcommand{\tagline}[1]{\def\@tagline{#1}}
-\newcommand{\photo}[2]{\def\@photo{#2}\def\@photodiameter{#1}}
-\newcommand{\email}[1]{\printinfo{\emailsymbol}{#1}}
-\newcommand{\mailaddress}[1]{\printinfo{\mailsymbol}{#1}}
-\newcommand{\phone}[1]{\printinfo{\phonesymbol}{#1}}
-\newcommand{\homepage}[1]{\printinfo{\homepagesymbol}{#1}}
-\newcommand{\twitter}[1]{\printinfo{\twittersymbol}{#1}}
-\newcommand{\linkedin}[1]{\printinfo{\linkedinsymbol}{#1}}
-\newcommand{\github}[1]{\printinfo{\githubsymbol}{#1}}
-\newcommand{\orcid}[1]{\printinfo{\orcidsymbol}{#1}}
-\newcommand{\location}[1]{\printinfo{\locationsymbol}{#1}}
-\newcommand{\gpgkey}[1]{\printinfo{\gpgsymbol}{#1}}
-
 \newcommand{\personalinfo}[1]{\def\@personalinfo{#1}}
+\NewInfoField{email}{\faAt}[mailto:]
+\NewInfoField{mailaddress}{\faEnvelopeS}
+\NewInfoField{phone}{\faPhone}
+\NewInfoField{homepage}{\faGlobe}[https://]
+\NewInfoField{link}{\faGlobe}[https://]
+\NewInfoField{twitter}{\faTwitter}[https://twitter.com/]
+\NewInfoField{linkedin}{\faLinkedIn}[https://linkedin.com/in/]
+\NewInfoField{github}{\faGitHub}[https://github.com/]
+\NewInfoField{orcid}{\faOrcid}[https://orcid.org/]
+\NewInfoField{location}{\faMapMarker}
+
+% v1.2: Support for multiple photos
+\newlength{\altacv@photos@width}
+\newlength{\altacv@photo@diam@left}
+\newlength{\altacv@photo@diam@right}
+\def\altacv@left@photos{}
+\def\altacv@right@photos{}
+
+\newcommand{\@makeaphoto}[2]{%
+  \begin{minipage}{#1}%
+    \if@normalphoto
+      \includegraphics[width=\linewidth]{#2}
+    \else
+      \tikz\path[fill overzoom image={#2}]circle[radius=0.5\linewidth];
+    \fi%
+  \end{minipage}%
+}
+
+\newcommand{\altacv@add@photo@left}[1]{%
+  \appto{\altacv@left@photos}{%
+    \@makeaphoto{\altacv@photo@diam@left}{#1}\hspace{1ex}%
+  }%
+  \addtolength{\altacv@photos@width}{\altacv@photo@diam@left}%
+  \addtolength{\altacv@photos@width}{1ex}%
+}
+\newcommand{\altacv@add@photo@right}[1]{%
+  \appto{\altacv@right@photos}{%
+    \@makeaphoto{\altacv@photo@diam@right}{#1}\hspace{1ex}%
+  }%
+  \addtolength{\altacv@photos@width}{\altacv@photo@diam@right}%
+  \addtolength{\altacv@photos@width}{1ex}%
+}
+\newcommand{\photoL}[2]{%
+  \setlength{\altacv@photo@diam@left}{#1}%
+  \forcsvlist{\altacv@add@photo@left}{#2}%
+}
+\newcommand{\photoR}[2]{%
+  \setlength{\altacv@photo@diam@right}{#1}%
+  \forcsvlist{\altacv@add@photo@right}{#2}%
+}
+\let\photo\photoR
+
+\newcommand{\namefont}{\Huge\bfseries}
+\newcommand{\taglinefont}{\large\bfseries}
+\newcommand{\personalinfofont}{\footnotesize\bfseries}
+\newcommand{\cvsectionfont}{\LARGE\bfseries}
+\newcommand{\cvsubsectionfont}{\large\bfseries}
 
 \newcommand{\makecvheader}{%
   \begingroup
-    \ifdef{\@photodiameter}{\begin{minipage}{\dimexpr\linewidth-\@photodiameter-2em}}{}%
-    \raggedright\color{emphasis}%
-    {\Huge\bfseries\MakeUppercase{\@name}\par}
+    \altacv@left@photos\hfill%
+    \begin{minipage}{\dimexpr\linewidth-\altacv@photos@width}%
+    \raggedright%
+    {\namefont\color{name}\MakeUppercase{\@name}\par}
     \medskip
-    {\large\bfseries\color{accent}\@tagline\par}
+    {\taglinefont\color{tagline}\@tagline\par}
     \medskip
-    {\footnotesize\bfseries\@personalinfo\par}
-    \ifdef{\@photodiameter}{%
+    {\personalinfofont\@personalinfo\par}
     \end{minipage}\hfill%
-    \begin{minipage}{\@photodiameter}
-    \if@normalphoto
-      \includegraphics[width=\linewidth]{\@photo}
-    \else
-      \tikz\path[fill overzoom image={\@photo}]circle[radius=0.5\linewidth];
-    \fi%
-    \end{minipage}\par}{}%
+    \altacv@right@photos\par%
   \endgroup\medskip
 }
 
@@ -193,13 +311,13 @@
 \newcommand{\cvsection}[2][]{%
   \bigskip%
   \ifstrequal{#1}{}{}{\marginpar{\vspace*{\dimexpr1pt-\baselineskip}\raggedright\input{#1}}}%
-  {\color{heading}\LARGE\bfseries\MakeUppercase{#2}}\\[-1ex]%
-  {\color{heading}\rule{\linewidth}{2pt}\par}\medskip
+  {\color{heading}\cvsectionfont\MakeUppercase{#2}}\\[-1ex]%
+  {\color{headingrule}\rule{\linewidth}{2pt}\par}\medskip
 }
 
 \newcommand{\cvsubsection}[1]{%
   \smallskip%
-  {\color{emphasis}\large\bfseries{#1}\par}\medskip
+  {\color{subheading}\cvsubsectionfont{#1}\par}\medskip
 }
 
 % v1.1.4: fixes inconsistent font size
@@ -207,12 +325,24 @@
   {\large\color{emphasis}#1\par}
   \smallskip\normalsize
   \ifstrequal{#2}{}{}{
-  \textbf{\color{accent}#2}\par
-  \smallskip}
-  \ifstrequal{#3}{}{}{{\small\makebox[0.5\linewidth][l]{\faCalendar\hspace{0.5em}#3}}}%
+    \textbf{\color{accent}#2}\par
+    \smallskip
+  }
+  \ifstrequal{#3}{}{}{{\small\makebox[0.5\linewidth][l]{\faCalendarR\hspace{0.5em}#3}}}%
   \ifstrequal{#4}{}{}{{\small\makebox[0.5\linewidth][l]{\faMapMarker\hspace{0.5em}#4}}}\par
   \medskip\normalsize
 }
+
+\newcommand{\cvrole}[3]{%
+  \smallskip\normalsize
+  \ifstrequal{#1}{}{}{
+  \textbf{\color{accent}#1}\par
+  \smallskip}
+  \ifstrequal{#2}{}{}{{\small\makebox[0.5\linewidth][l]{\faCalendarR\hspace{0.5em}#2}}}%
+  \ifstrequal{#3}{}{}{{\small\makebox[0.5\linewidth][l]{\faGlobe\hspace{0.5em}#3}}}\par
+  \medskip\normalsize
+}
+
 
 \newcommand{\cvachievement}[3]{%
   \begin{tabularx}{\linewidth}{@{}p{2em} @{\hspace{1ex}} >{\raggedright\arraybackslash}X@{}}
@@ -222,24 +352,36 @@
   \smallskip
 }
 
+\newcommand{\cvhonor}[5]{%
+  \begin{tabularx}
+    {\linewidth}{@{}p{2em} @{\hspace{1ex}} >{\raggedright\arraybackslash}X@{}}
+    \multirow{2}{*}{\Large\color{accent}#1} & \bfseries\textcolor{emphasis}{#2} \\
+    & \small\normalfont{#3} \\
+    & \small\normalfont{#4} \\
+    & \small\normalfont{#5}
+  %% & #3
+  \end{tabularx}%
+  \smallskip
+}
+
 \newcommand{\cvtag}[1]{%
-  \tikz[baseline]\node[anchor=base,draw=body!50,rounded corners,inner xsep=1ex,inner ysep =1ex,text height=1.4ex,text depth=.2ex]{#1};
+  \tikz[baseline]\node[anchor=base,draw=body!30,rounded corners,inner xsep=1ex,inner ysep =0.75ex,text height=1.5ex,text depth=.25ex]{#1};
 }
 
 \newcommand{\cvskill}[2]{%
 \textcolor{emphasis}{\textbf{#1}}\hfill
 \foreach \x in {1,...,5}{%
-  \space{\ifnumgreater{\x}{#2}{\color{body!30}}{\color{accent}}\faCircle}}\par%
+  \space{\ifnumgreater{\x}{#2}{\color{body!30}}{\color{accent}}\ratingmarker}}\par%
 }
 
 % Adapted from @Jake's answer at http://tex.stackexchange.com/a/82729/226
-\newcommand{\wheelchart}[3]{%
+\newcommand{\wheelchart}[4][0]{%
     \begingroup\centering
-    \def\innerradius{#2}%
-    \def\outerradius{#1}%
+    \def\innerradius{#3}%
+    \def\outerradius{#2}%
     % Calculate total
     \pgfmathsetmacro{\totalnum}{0}%
-    \foreach \value/\colour/\name in {#3} {%
+    \foreach \value/\colour/\name in {#4} {%
         \pgfmathparse{\value+\totalnum}%
         \global\let\totalnum=\pgfmathresult%
     }%
@@ -248,13 +390,14 @@
       % Calculate the thickness and the middle line of the wheel
       \pgfmathsetmacro{\wheelwidth}{\outerradius-\innerradius}
       \pgfmathsetmacro{\midradius}{(\outerradius+\innerradius)/2}
+      \pgfmathsetmacro{\totalrot}{-90 + #1}
 
       % Rotate so we start from the top
-      \begin{scope}[rotate=-90]
+      \begin{scope}[rotate=\totalrot]
 
       % Loop through each value set. \cumnum keeps track of where we are in the wheel
       \pgfmathsetmacro{\cumnum}{0}
-      \foreach \value/\width/\colour/\name in {#3} {
+      \foreach \value/\width/\colour/\name in {#4} {
             \pgfmathsetmacro{\newcumnum}{\cumnum + \value/\totalnum*360}
 
             % Calculate the percent value
@@ -287,12 +430,16 @@
 }
 
 \newcommand{\cvref}[3]{%
-  \smallskip
-  \textcolor{emphasis}{\textbf{#1}}\par
-  \begin{description}[font=\color{accent},style=multiline,leftmargin=1em]
-  \item[\normalfont\emailsymbol] #2
-  \item[\small\normalfont\mailsymbol] #3
-  \end{description}
+    \textcolor{emphasis}{\textbf{#1}}\par
+    \smallskip\normalsize
+    \ifstrequal{#2}{}{}{
+        {\small\email{#2}}\par
+        \smallskip
+    }
+    \ifstrequal{#3}{}{}{
+      {\small\normalfont{#3}}
+    }%
+    \medskip\normalsize
 }
 
 \newcommand\cvcert[2]%
@@ -313,7 +460,7 @@
 }
 
 \newcommand{\lildot}[0]{%
-    \,\,\tiny\faCircle\,\,
+    \,\,\tiny\faCircleS\,\,
 }
 
 
