--- a/page1sidebar.tex
+++ b/page1sidebar.tex
@@ -1,36 +1,14 @@
 \cvsection{Life Philosophy}
 
 \begin{quote}
-``Talk less, Do more.''
-\end{quote}
-
-\begin{quote}
 ``If you want to build a ship, don\'t herd people together to collect wood and don\'t assign them tasks and work, but rather \\teach them to long for the endless immensity of the sea. - Antoine de Saint-Exup\'{e}ry''
 \end{quote}
 
-
-\cvsection{Most Proud of}
-
-\cvachievement{\faTrophy}{Courage I had}{take projects from scratch and do everything possible to get them forward.}
-\cvachievement{\faHeartbeat}{Persistence \& Loyalty}{I showed despite the hard moments and my willingness.}
-
-\cvsection{Strengths}
-
-\cvtag{Hard-working (14/24)}
-\cvtag{Persuasive}
-\cvtag{Motivator \& Leader}
+\input{sections/honors.tex}
 
 \divider\smallskip
 
-\cvsection{Education}
-\cvevent{DevOps/Sre}{\textbf{Udacity}, Lima, Peru}{Enero 2017 -- June 2017}{}
-\cvevent{Software Developer}{\textbf{Open Source College}, Lima, Peru}{2011 -- 2012}{}
-
-\cvsection{Certifications}
-\cvcert{Blockchain Theory 101}{UC-5ca28586-6a49-4a2b-8866-c8dced9ea86d}
-\cvcert{Dart \& Introducción a Flutter}{UC-ae7fb794-dd26-431c-b254-c90face1cb37}
-\cvcert{Golang JumpStart}{UC-OLLIR7U2}
-\cvcert{Serverless Architecture on Amazon Web Services}{UC-TGNRQYS5}
+\input{sections/education.tex}
 
 
 \addnextpagesidebar[-1ex]{page2sidebar}
