--- a/page2sidebar.tex
+++ b/page2sidebar.tex
@@ -1,36 +1,4 @@
-\cvsection{Skills}
-
-\cvskill{Go}{5}
-\cvskill{Python}{5}
-\cvskill{Bash}{5}
-\cvskill{Cloud Computing}{4}
-\cvskill{AWS}{4}
-\cvskill{Infraestructure as Code}{4}
-\cvskill{Design Patterns}{4}
-\cvskill{Automation}{3}
-\cvskill{Lua}{3}
-\cvskill{Security}{3}
-\cvskill{Rust}{2}
-
-\cvsection{\mbox{Technical Interests}}
-\cvtag{Infraestructure as Code}
-\cvtag{monitoring and alerting}
-\cvtag{automation}
-\cvtag{log aggregation}
-\cvtag{vulnerability assessment}
-\cvtag{system security and hardening}
-\cvtag{intrusion detection}
-\cvtag{file and platform integrity}
-\cvtag{metrics visualization and analytics}
-\cvtag{transport layer security and encryption}
-\cvtag{privacy and transparency}
-
-\cvsection{Languages}
-
-\cvskill{Spanish}{5}
-\cvskill{English}{3}
-
-\cvsection{Referees}
-% \cvref{name}{email}{mailing address}
-\cvref{Prof.\ Alberto Taboada Jimenez}{taboada.al@hotmail.com}
-{Coordinador academico del Programa CPE\\ Univ. Cesar Vallejo}
+\input{sections/certifications.tex}
+\input{sections/skills.tex}
+\input{sections/languages.tex}
+\input{sections/referess.tex}
