--- a/resume.tex
+++ b/resume.tex
@@ -18,6 +18,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage[default]{lato}
+\usepackage{./styles/fontawesome}
 
 % If using xelatex or lualatex:
 %% \setmainfont{Lato}
@@ -34,7 +35,7 @@
 % Change the bullets for itemize and rating marker
 % for \cvskill if you want to
 \renewcommand{\itemmarker}{{\small\textbullet}}
-\renewcommand{\ratingmarker}{\faCircle}
+\renewcommand{\ratingmarker}{\faCircleS}
 
 \begin{document}
 
