--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -4,7 +4,7 @@
 \cvsection[page1sidebar]{Recent Work Experience}
 
 
-\cvevent{\textbf{Founder} \& \textbf{CTO}}{\textbf{HadenLabs}}{Jan 2014 – Now}{Lima, Peru}
+\cvevent{\textbf{Founder} \& \textbf{CTO}}{\textbf{HadenLabs}}{Jan 2014 -- Now}{Lima, Peru}
 \begin{itemize}
     \item Act as a trusted technical advisor to customers and solve complex Cloud Infrastructure and DevOps challenges.
     \item Create and deliver best practices recommendations, tutorials, blog articles, sample code, and technical presentations.
@@ -18,7 +18,7 @@
 
 \divider
 
-\cvevent{DevOps Engineer}{\textbf{Maker Development}}{Nov 2020 – Now}{Lima, Peru}
+\cvevent{DevOps Engineer}{\textbf{Maker Development}}{Nov 2020 -- Now}{Lima, Peru}
 \begin{itemize}
     \item Implementation of Infrastructure as code with Terragrunt and Terraform.
     \item Wrote Ansible roles covering a diverse environment of machines running different versions of Ubuntu
@@ -30,7 +30,7 @@
 
 \divider
 
-\cvevent{\textbf{Cloud Consultant} / SRE}{\textbf{El Pollo Escondido}}{Nov 2020 – Now}{Lima, Peru}
+\cvevent{\textbf{Cloud Consultant} / SRE}{\textbf{El Pollo Escondido}}{Nov 2020 -- Now}{Lima, Peru}
 \begin{itemize}
     \item Wrote Ansible roles covering a diverse environment of machines running different versions of Ubuntu.
     \item Setting up and provisioning Load Balanced Environments using EC2 and RDS within VPCs as well as associated backups on S3, also if required using both Amazon Web Console and CLI.
@@ -40,7 +40,7 @@
 
 \divider
 
-\cvevent{\textbf{CoFounder} / \textbf{CTO} / SRE}{\textbf{EquipIndustry}}{Jul 2019 – Nov 2020}{Lima, Peru}
+\cvevent{\textbf{CoFounder} / \textbf{CTO} / SRE}{\textbf{EquipIndustry}}{Jul 2019 -- Nov 2020}{Lima, Peru}
 \begin{itemize}
     \item Implementation of Infrastructure as code with Terragrunt and Terraform.
     \item Define and refine process day to day basis as per requirements and identified bottlenecks
@@ -56,7 +56,7 @@
 
 \divider
 
-\cvevent{\textbf{Cloud Consultant} / SRE}{\textbf{Osakia}}{Apr 2020 – Jun 2020}{Lima, Peru}
+\cvevent{\textbf{Cloud Consultant} / SRE}{\textbf{Osakia}}{Apr 2020 -- Jun 2020}{Lima, Peru}
 \begin{itemize}
     \item Implementation of Infrastructure as code with Terragrunt and Terraform.
     \item Setting up and provisioning Load Balanced Environments using EC2 and RDS within VPCs as well as associated backups on S3, also if required using both Amazon Web Console and CLI.
@@ -66,7 +66,7 @@
 
 \divider
 
-\cvevent{\textbf{Cloud Consultant} / SRE / DevOps}{\textbf{Vipac Peru}}{Apr 2019 – Jun 2020}{Lima, Peru}
+\cvevent{\textbf{Cloud Consultant} / SRE / DevOps}{\textbf{Vipac Peru}}{Apr 2019 -- Jun 2020}{Lima, Peru}
 \begin{itemize}
     \item I also replaced and improved the entire monitoring stack and wrote lots of alert rules and even custom Prometheus exporters to achieve what was needed.
     \item There was a continuous work on improving the costs of infrastructure. This involved resizing machines, auto scaling groups, spot instances, backup policies and several other things.
@@ -79,7 +79,7 @@
 
 \divider
 
-\cvevent{\textbf{Cloud Consultant}}{\textbf{Vipac Peru}}{Sep 2018 – Dec 2018}{Lima, Peru}
+\cvevent{\textbf{Cloud Consultant}}{\textbf{Vipac Peru}}{Sep 2018 -- Dec 2018}{Lima, Peru}
 \begin{itemize}
     \item Implementation of Infrastructure as code with Terragrunt and Terraform.
     \item Analysis and deployment of scalable solutions.
@@ -108,7 +108,7 @@
 
 \divider
 
-\cvevent{Cloud Consultant / SRE}{\textbf{Gap Solutions}}{Dec 2017 – Feb 2018}{Lima, Peru}
+\cvevent{Cloud Consultant / SRE}{\textbf{Gap Solutions}}{Dec 2017 -- Feb 2018}{Lima, Peru}
 \begin{itemize}
     \item Support a distributed development team.
     \item Analysis and deployment of scalable solutions.
