--- a/sections/part_time_roles.tex
+++ b/sections/part_time_roles.tex
@@ -1,6 +1,6 @@
 \cvsection{Part-time roles}
 
-\cvevent{}{Software Developer Freedom Project}{February 2018 to Present}{github.com/PunoPeru}
+\cvrole{Software Developer Freedom Project}{February 2018 to Present}{\github{PunoPeru}}
 \begin{itemize}
     \item Maintaining the organization.
 \end{itemize}
