fix: generate tags content alignment (#83)

--- a/core/altacv.cls
+++ b/core/altacv.cls
@@ -365,13 +365,14 @@
 }
 
 \newcommand{\cvtag}[1]{%
-  \tikz[baseline]\node[anchor=base,draw=body!30,rounded corners,inner xsep=1ex,inner ysep =0.75ex,text height=1.5ex,text depth=.25ex]{#1};
+  \tikz[baseline]\node[anchor=base,draw=body!30,rounded corners,inner xsep=1ex,inner ysep =0.75ex,text height=1.5ex,text depth=.25ex]{#1};\par
 }
 
 \newcommand{\cvskill}[2]{%
 \textcolor{emphasis}{\textbf{#1}}\hfill
 \foreach \x in {1,...,5}{%
-  \space{\ifnumgreater{\x}{#2}{\color{body!30}}{\color{accent}}\ratingmarker}}\par%
+  \space{\ifnumgreater{\x}{#2}{\color{body!30}}{\color{accent}}\ratingmarker}
+}\par
 }
 
 % Adapted from @Jake's answer at http://tex.stackexchange.com/a/82729/226
@@ -442,12 +443,11 @@
     \medskip\normalsize
 }
 
-\newcommand\cvcert[2]%
-  {\begin{tabular}{ c | c }
-  \small
-  \textcolor{emphasis}{\textbf{#1}} & #2 \\
-   \end{tabular}%
- }
+\newcommand\cvcert[1]{
+    \small
+    \textcolor{emphasis}{\textbf{#1}}\par
+    \medskip\normalsize
+}
 
 \newcommand{\cvtool}[1]{%
       \ifbolded
