--- a/sections/certifications.tex
+++ b/sections/certifications.tex
@@ -1,6 +1,6 @@
 \cvsection{Certifications}
 
-\cvcert{Blockchain Theory 101}{UC-5ca28586-6a49-4a2b-8866-c8dced9ea86d}
-\cvcert{Dart \& Introducción a Flutter}{UC-ae7fb794-dd26-431c-b254-c90face1cb37}
-\cvcert{Golang JumpStart}{UC-OLLIR7U2}
-\cvcert{Serverless Architecture on Amazon Web Services}{UC-TGNRQYS5}
+\cvcert{Blockchain Theory 101}
+\cvcert{Dart \& Introducción a Flutter}
+\cvcert{Golang JumpStart}
+\cvcert{Serverless Architecture on Amazon Web Services}
