fix: data font not recognized (#83)

--- a/sections/conferences.tex
+++ b/sections/conferences.tex
@@ -1,13 +1,13 @@
 \cvsection{Conferences}
 
-\cvevent{Mean Full-Stack}{\textbf{Compartiendo Conocimiento}}{April 2015}{Hauraz, Peru}
+\cvevent{Mean Full-Stack}{\textbf{Compartiendo Conocimiento}}{April 2015}{Hauraz - Peru}
 \begin{itemize}
   \item Co-organizer.
 \end{itemize}
 
 \divider
 
-\cvevent{Introduction to NoSQL MongoDB}{\textbf{MongoDB Peru}}{April 2014}{Huaraz, Peru}
+\cvevent{Introduction to NoSQL MongoDB}{\textbf{MongoDB Peru}}{April 2014}{Huaraz - Peru}
 \begin{itemize}
   \item Speaker.
 \end{itemize}
