--- a/sections/volunteer.tex
+++ b/sections/volunteer.tex
@@ -1,13 +1,13 @@
 \cvsection{Volunteer}
 
-\cvevent{Development Leader}{\textbf{Compartiendo Conocimiento}}{February 2015 - Present}{Lima, Peru}
+\cvevent{Development Leader}{\textbf{Compartiendo Conocimiento}}{February 2015 -- Present}{Lima - Peru}
 \begin{itemize}
   \item Co-organizer.
   \item Research.
 \end{itemize}
 \divider
 
-\cvevent{Member \& Evangelist}{\textbf{MongoDB Peru}}{June 2013 - Present}{Lima, Peru}
+\cvevent{Member \& Evangelist}{\textbf{MongoDB Peru}}{June 2013 -- Present}{Lima -- Peru}
 \begin{itemize}
   \item Speaker
   \item Research.
