chore: implement node and dart (#83)

--- a/sections/skills.tex
+++ b/sections/skills.tex
@@ -7,8 +7,10 @@
 \cvskill{AWS}{4}
 \cvskill{Infraestructure as Code}{4}
 \cvskill{Design Patterns}{4}
-\cvskill{Automation}{3}
+\cvskill{Automation}{4}
 \cvskill{Lua}{3}
+\cvskill{Node}{3}
+\cvskill{Dart}{3}
 \cvskill{Security}{3}
 \cvskill{Rust}{2}
 
