--- a/resume.tex
+++ b/resume.tex
@@ -1,4 +1,4 @@
-\documentclass[10pt,a4paper]{./core/altacv}
+\documentclass[10pt,a4paper,ragged2e,withhyper]{./core/altacv}
 
 %% AltaCV uses the fontawesome and academicon fonts
 %% and packages.
