--- a/sections/certifications.tex
+++ b/sections/certifications.tex
@@ -3,4 +3,4 @@
 \cvcert{Blockchain Theory 101}
 \cvcert{Dart \& Introducción a Flutter}
 \cvcert{Golang JumpStart}
-\cvcert{Serverless Architecture on Amazon Web Services}
+\cvcert{Serverless Architecture on AWS}
