--- a/sections/personal.tex
+++ b/sections/personal.tex
@@ -1,7 +1,7 @@
 %% \cvsection{Personal}
 \name{Luis Mayta}
 \tagline{Passionate Coder {;} | Cryptocurrency \& AI Enthusiast }
-\photoR{2.5cm}{./static/images/avatar}
+\photoR{2.5cm}{./assets/images/avatar}
 \personalinfo{%
   % Not all of these are required!
   \email{slovacus@gmail.com}
