feat: upgrade configurations core (#90)

--- a/core/packages/misc.sty
+++ b/core/packages/misc.sty
@@ -13,7 +13,7 @@
     \textcolor{emphasis}{\textbf{#1}}\par
     \smallskip\normalsize
     \ifstrequal{#2}{}{}{
-        {\small\email{#2}}\par
+        {\small\phone{#2}}\par
         \smallskip
     }
     \ifstrequal{#3}{}{}{
