--- a/sections/personal.tex
+++ b/sections/personal.tex
@@ -7,7 +7,7 @@
   \email{slovacus@gmail.com}
   \phone{(+51) 959-196-850}
   \location{Lima, Peru}
-  \homepage{luismayta.me}
+  \homepage{luismayta.github.io}
   \twitter{@slovacus}
   \linkedin{luismayta}
   \github{luismayta}
