--- a/sections/referess.tex
+++ b/sections/referess.tex
@@ -1,3 +1,9 @@
 \cvsection{Referees}
 % \cvref{name}{email}{information}
-\cvref{Prof. Alberto Taboada Jimenez}{taboada.al@hotmail.com}{Coord. CPE Univ. Cesar Vallejo}
+\cvref{Lilian Ccaulla Flores}{(+51) 992797540}{Product Owner - Grupo El Comercio}
+
+\cvref{Juan Carlos Dávila Terreros}{(+51) 982988000}{Gerente General - Maker Development}
+
+\cvref{Jan Sanchez}{(+51) 983444164}{Jefe de desarrollo de Mobile - Grupo El Comercio}
+
+\cvref{Israel Gonzales Palomino}{(+51) 981100543}{Analista de Proyectos - Interbank}
