--- a/sections/skills.tex
+++ b/sections/skills.tex
@@ -9,20 +9,14 @@
 \cvskill{Design Patterns}{4}
 \cvskill{Automation}{4}
 \cvskill{Lua}{3}
-\cvskill{Node}{3}
+\cvskill{NodeJS}{3}
 \cvskill{Dart}{3}
-\cvskill{Security}{3}
 \cvskill{Rust}{2}
 
 \cvsection{\mbox{Technical Interests}}
 \cvtag{Infraestructure as Code}
 \cvtag{monitoring and alerting}
-\cvtag{automation}
-\cvtag{log aggregation}
-\cvtag{vulnerability assessment}
-\cvtag{system security and hardening}
-\cvtag{intrusion detection}
-\cvtag{file and platform integrity}
-\cvtag{metrics visualization and analytics}
 \cvtag{transport layer security and encryption}
-\cvtag{privacy and transparency}
+\cvtag{automation}
+\cvtag{vulnerability assessment}
+\cvtag{metrics visualization and analytics}
