chore: implement experience inetum and infosis (#90)

--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -3,6 +3,33 @@
 %-------------------------------------------------------------------------------
 \cvsection[page1sidebar]{Recent Work Experience}
 
+\cvevent{\textbf{DevOps Engineer}}{\textbf{Infosis}}{Jul 2021 -- Now}{Lima - Peru}
+\begin{itemize}
+    \item Wrote Modules Terraform for management Services.
+    \item Analyzing, executing, and streamlining DevOps practices.
+    \item Create and deliver best practices recommendations, tutorials, blog articles, sample code, and technical presentations.
+    \item Automating processes with the right tools.
+    \item Facilitating development process and operations
+    \item Monitoring, reviewing and alerting setup, modification and troubleshooting and stopping attacks on websites.
+    \item Setting up a continuous build environment to speed up software development and deployment process.
+\end{itemize}
+
+\divider
+
+\cvevent{\textbf{DevOps Architect}}{\textbf{Inetum}}{May 2021 -- Jul 2021}{Lima - Peru}
+\begin{itemize}
+    \item Wrote Modules Terraform for management Services.
+    \item Analyzing, executing, and streamlining DevOps practices.
+    \item Create and deliver best practices recommendations, tutorials, blog articles, sample code, and technical presentations.
+    \item Wrote Best Pipelines for Jenkins.
+    \item Automating processes with the right tools.
+    \item Facilitating development process and operations
+    \item Establishing a suitable DevOps channel across the organization.
+    \item Monitoring, reviewing and alerting setup, modification and troubleshooting and stopping attacks on websites.
+    \item Setting up a continuous build environment to speed up software development and deployment process.
+\end{itemize}
+
+\divider
 
 \cvevent{\textbf{Founder} \& \textbf{CTO}}{\textbf{HadenLabs}}{Jan 2014 -- Now}{Lima - Peru}
 \begin{itemize}
@@ -18,7 +45,17 @@
 
 \divider
 
-\cvevent{DevOps Engineer}{\textbf{Maker Development}}{Nov 2020 -- Now}{Lima - Peru}
+\cvevent{\textbf{Cloud Consultant} / SRE}{\textbf{El Pollo Escondido}}{Nov 2020 -- Apr 2021}{Lima - Peru}
+\begin{itemize}
+    \item Wrote Ansible roles covering a diverse environment of machines running different versions of Ubuntu.
+    \item Setting up and provisioning Load Balanced Environments using EC2 and RDS within VPCs as well as associated backups on S3, also if required using both Amazon Web Console and CLI.
+    \item Monitoring and alerting setup, modification and troubleshooting and stopping attacks on websites.
+    \item Implementation of Infrastructure as code with Terragrunt and Terraform.
+\end{itemize}
+
+\divider
+
+\cvevent{\textbf{DevOps Engineer}}{\textbf{Maker Development}}{Nov 2020 -- Apr 2021}{Lima - Peru}
 \begin{itemize}
     \item Implementation of Infrastructure as code with Terragrunt and Terraform.
     \item Wrote Ansible roles covering a diverse environment of machines running different versions of Ubuntu
@@ -26,16 +63,6 @@
     \item Monitoring and alerting setup, modification and troubleshooting and stopping attacks on websites.
     \item Preparation of documentation, within the code I produce by appropriate commenting, version descriptions via Git and Solution documentation for other engineers to follow.
     \item Test driven releases, Infrastructure as code and Automation.
-\end{itemize}
-
-\divider
-
-\cvevent{\textbf{Cloud Consultant} / SRE}{\textbf{El Pollo Escondido}}{Nov 2020 -- Now}{Lima - Peru}
-\begin{itemize}
-    \item Wrote Ansible roles covering a diverse environment of machines running different versions of Ubuntu.
-    \item Setting up and provisioning Load Balanced Environments using EC2 and RDS within VPCs as well as associated backups on S3, also if required using both Amazon Web Console and CLI.
-    \item Monitoring and alerting setup, modification and troubleshooting and stopping attacks on websites.
-    \item Implementation of Infrastructure as code with Terragrunt and Terraform.
 \end{itemize}
 
 \divider
@@ -135,7 +162,7 @@
 
 \divider
 
-\cvevent{Cloud Architect}{\textbf{La Positiva Seguros}}{June 2017 -- November 2017}{Lima - Peru}
+\cvevent{\textbf{Cloud Architect}}{\textbf{La Positiva Seguros}}{June 2017 -- November 2017}{Lima - Peru}
 \begin{itemize}
     \item Preparation of documentation, within the code I produce by appropriate commenting, version descriptions via Git and Solution documentation for other engineers to follow.
     \item Implementation of Infrastructure as code with Terragrunt and Terraform.
@@ -147,7 +174,7 @@
 
 \divider
 
-\cvevent{Software Architect}{\textbf{Ventorystack}}{January 2017 -- June 2017}{Lima - Peru}
+\cvevent{\textbf{Software Architect}}{\textbf{Ventorystack}}{January 2017 -- June 2017}{Lima - Peru}
 \begin{itemize}
     \item Infrastructure as code with Terraform + Ansible + AWS.
     \item Preparation of documentation, within the code I produce by appropriate commenting, version descriptions via Git and Solution documentation for other engineers to follow.
