chore: implement experience infosis (#90)

--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -5,12 +5,13 @@
 
 \cvevent{\textbf{DevOps Engineer}}{\textbf{Infosis}}{Jul 2021 -- Now}{Lima - Peru}
 \begin{itemize}
-    \item Wrote Modules Terraform for management Services.
+    \item I also replaced and improved the entire monitoring stack and wrote lots of alert rules and even custom Prometheus exporters to achieve what was needed.
+    \item Preparation of documentation, within the code I produce by appropriate commenting, version descriptions via Git and Solution documentation for other engineers to follow.
     \item Analyzing, executing, and streamlining DevOps practices.
     \item Create and deliver best practices recommendations, tutorials, blog articles, sample code, and technical presentations.
+    \item Implementation of Infrastructure as code with Terragrunt and Terraform.
     \item Automating processes with the right tools.
     \item Facilitating development process and operations
-    \item Monitoring, reviewing and alerting setup, modification and troubleshooting and stopping attacks on websites.
     \item Setting up a continuous build environment to speed up software development and deployment process.
 \end{itemize}
 
@@ -58,6 +59,7 @@
 \cvevent{\textbf{DevOps Engineer}}{\textbf{Maker Development}}{Nov 2020 -- Apr 2021}{Lima - Peru}
 \begin{itemize}
     \item Implementation of Infrastructure as code with Terragrunt and Terraform.
+    \item Implement And Administration of Kubernetes.
     \item Wrote Ansible roles covering a diverse environment of machines running different versions of Ubuntu
     \item There was a continuous work on improving the costs of infrastructure. This involved resizing machines, auto scaling groups, spot instances, backup policies and several other things.
     \item Monitoring and alerting setup, modification and troubleshooting and stopping attacks on websites.
