--- a/sections/personal.tex
+++ b/sections/personal.tex
@@ -1,6 +1,6 @@
 %% \cvsection{Personal}
 \name{Luis Mayta}
-\tagline{Passionate Coder {;} | Cryptocurrency \& AI Enthusiast }
+\tagline{ Passionate Coder {;} | Blockchain \& AI Enthusiast | Go, Python, Web3 - DevOps Engineer }
 \photoR{2.5cm}{./assets/images/avatar}
 \personalinfo{%
   % Not all of these are required!
