--- a/sections/skills.tex
+++ b/sections/skills.tex
@@ -4,6 +4,7 @@
 \cvskill{Python}{5}
 \cvskill{Bash}{5}
 \cvskill{Cloud Computing}{4}
+\cvskill{Kubernetes}{4}
 \cvskill{AWS}{4}
 \cvskill{Infraestructure as Code}{4}
 \cvskill{Design Patterns}{4}
@@ -12,6 +13,7 @@
 \cvskill{NodeJS}{3}
 \cvskill{Dart}{3}
 \cvskill{Rust}{2}
+\cvskill{Web3}{2}
 
 \cvsection{\mbox{Technical Interests}}
 \cvtag{Infraestructure as Code}
