chore: implement certifications blockchain (#90)

--- a/sections/certifications.tex
+++ b/sections/certifications.tex
@@ -1,5 +1,6 @@
 \cvsection{Certifications}
 
+\cvcert{Blockchain Developer with Ethereum}
 \cvcert{Blockchain Theory 101}
 \cvcert{Dart \& Introducción a Flutter}
 \cvcert{Golang JumpStart}
