--- a/sections/skills.tex
+++ b/sections/skills.tex
@@ -2,7 +2,6 @@
 
 \cvskill{Go}{5}
 \cvskill{Python}{5}
-\cvskill{Bash}{5}
 \cvskill{Cloud Computing}{4}
 \cvskill{Kubernetes}{4}
 \cvskill{AWS}{4}
@@ -14,6 +13,7 @@
 \cvskill{Dart}{3}
 \cvskill{Rust}{2}
 \cvskill{Web3}{2}
+\cvskill{Nft}{2}
 
 \cvsection{\mbox{Technical Interests}}
 \cvtag{Infraestructure as Code}
