chore: implement command experience (#102)

--- a/core/packages/items.sty
+++ b/core/packages/items.sty
@@ -9,3 +9,15 @@
   \ifstrequal{#4}{}{}{{\small\makebox[0.5\linewidth][l]{\faMapMarker\hspace{0.5em}#4}}}\par
   \medskip\normalsize
 }
+
+\newcommand{\cvexperience}[4]{%
+    {\large\color{emphasis}\textbf{#1}\par}
+  \smallskip\normalsize
+  \ifstrequal{#2}{}{}{
+      \textbf{\color{accent}#2}\par
+    \smallskip
+  }
+  \ifstrequal{#3}{}{}{{\small\makebox[0.5\linewidth][l]{\faCalendarR\hspace{0.5em}#3}}}%
+  \ifstrequal{#4}{}{}{{\textbf{\small\makebox[0.5\linewidth][l]{\faMapMarker\hspace{0.5em}#4}}}}\par
+  \medskip\normalsize
+}
